--- a/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/TagsTableViewCell.xib
+++ b/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/TagsTableViewCell.xib
@@ -10,7 +10,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="TagsTableViewCell" customModule="portfolio_ios" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="tagsCell" id="KGk-i7-Jjw" customClass="TagsTableViewCell" customModule="portfolio_ios" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="202" height="44"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -34,10 +34,10 @@
                         <color key="value" white="0.33333333329999998" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </userDefinedRuntimeAttribute>
                     <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
-                        <real key="value" value="5"/>
+                        <real key="value" value="2"/>
                     </userDefinedRuntimeAttribute>
                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRound">
-                        <real key="value" value="5"/>
+                        <real key="value" value="16"/>
                     </userDefinedRuntimeAttribute>
                 </userDefinedRuntimeAttributes>
             </tableViewCellContentView>
