--- a/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/TagsTableViewCell.xib
+++ b/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/TagsTableViewCell.xib
@@ -17,8 +17,8 @@
                 <rect key="frame" x="0.0" y="0.0" width="202" height="44"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="タグ名" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ud4-pW-cwc">
-                        <rect key="frame" x="16" y="8" width="52" height="28"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="hoge" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ud4-pW-cwc">
+                        <rect key="frame" x="16" y="8" width="38.5" height="28"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
