--- a/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
+++ b/portfolio-ios/portfolio-ios/View/PersonalSubmitWork/PersonalSubmitWork.storyboard
@@ -87,7 +87,7 @@
                                                                 </buttonConfiguration>
                                                                 <connections>
                                                                     <action selector="addTag:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="DAT-Vd-III"/>
-                                                                    <segue destination="MaW-vb-xD3" kind="presentation" id="5dF-Ee-hhM"/>
+                                                                    <segue destination="MaW-vb-xD3" kind="presentation" identifier="" modalPresentationStyle="fullScreen" id="5dF-Ee-hhM"/>
                                                                 </connections>
                                                             </button>
                                                         </subviews>
@@ -335,31 +335,28 @@
             <objects>
                 <viewController id="MaW-vb-xD3" customClass="TagsViewController" customModule="portfolio_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="cL6-Vr-xrC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="No3-rj-Ib7">
-                                <rect key="frame" x="0.0" y="36" width="414" height="44"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <searchBar contentMode="redraw" translatesAutoresizingMaskIntoConstraints="NO" id="No3-rj-Ib7">
+                                <rect key="frame" x="0.0" y="80" width="414" height="51"/>
                                 <textInputTraits key="textInputTraits"/>
                             </searchBar>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="候補タグ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yjk-Iy-Q9y">
-                                <rect key="frame" x="20" y="98" width="70" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="候補タグ" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yjk-Iy-Q9y">
+                                <rect key="frame" x="16" y="155" width="70" height="21"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="576-JQ-8g5">
-                                <rect key="frame" x="20" y="149" width="374" height="659"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="18" estimatedSectionHeaderHeight="-1" sectionFooterHeight="18" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="576-JQ-8g5">
+                                <rect key="frame" x="16" y="192" width="382" height="704"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tagsCell" id="HWw-hj-Rml">
-                                        <rect key="frame" x="0.0" y="49.5" width="374" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="49.5" width="382" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="HWw-hj-Rml" id="0RL-X3-3dO">
-                                            <rect key="frame" x="0.0" y="0.0" width="374" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="382" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </tableViewCellContentView>
                                     </tableViewCell>
@@ -370,9 +367,30 @@
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
                             </tableView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="fill" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SJ7-kc-ne5">
+                                <rect key="frame" x="24" y="24" width="37" height="48"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="48" id="MCh-lX-vEY"/>
+                                </constraints>
+                                <color key="tintColor" red="1" green="0.53419494629999997" blue="0.70248031619999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <buttonConfiguration key="configuration" style="plain" image="chevron.backward" catalog="system"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="lhF-wP-no8"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="SJ7-kc-ne5" firstAttribute="leading" secondItem="lhF-wP-no8" secondAttribute="leading" constant="24" id="5Lh-pY-Yu9"/>
+                            <constraint firstItem="576-JQ-8g5" firstAttribute="leading" secondItem="lhF-wP-no8" secondAttribute="leading" constant="16" id="5je-nW-IDc"/>
+                            <constraint firstItem="576-JQ-8g5" firstAttribute="top" secondItem="yjk-Iy-Q9y" secondAttribute="bottom" constant="16" id="9z2-hX-6T1"/>
+                            <constraint firstItem="yjk-Iy-Q9y" firstAttribute="top" secondItem="No3-rj-Ib7" secondAttribute="bottom" constant="24" id="JLI-Ad-19c"/>
+                            <constraint firstItem="lhF-wP-no8" firstAttribute="trailing" secondItem="576-JQ-8g5" secondAttribute="trailing" constant="16" id="OiJ-Or-xQN"/>
+                            <constraint firstItem="SJ7-kc-ne5" firstAttribute="top" secondItem="cL6-Vr-xrC" secondAttribute="top" constant="24" id="RTF-Ut-OFA"/>
+                            <constraint firstAttribute="bottom" secondItem="576-JQ-8g5" secondAttribute="bottom" id="jXA-F0-TR2"/>
+                            <constraint firstItem="No3-rj-Ib7" firstAttribute="leading" secondItem="lhF-wP-no8" secondAttribute="leading" id="o6j-cn-uEe"/>
+                            <constraint firstItem="No3-rj-Ib7" firstAttribute="top" secondItem="SJ7-kc-ne5" secondAttribute="bottom" constant="8" id="qpN-ME-3eA"/>
+                            <constraint firstItem="yjk-Iy-Q9y" firstAttribute="leading" secondItem="lhF-wP-no8" secondAttribute="leading" constant="16" id="sgt-QD-WL3"/>
+                            <constraint firstItem="No3-rj-Ib7" firstAttribute="trailing" secondItem="lhF-wP-no8" secondAttribute="trailing" id="thx-Mg-VB1"/>
+                        </constraints>
                     </view>
                     <connections>
                         <outlet property="tagsTableView" destination="576-JQ-8g5" id="9Au-QD-Eel"/>
@@ -380,7 +398,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="CAp-iH-qtA" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1904" y="63"/>
+            <point key="canvasLocation" x="1902.8985507246377" y="62.946428571428569"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dtC-79-plB">
@@ -403,6 +421,7 @@
     </scenes>
     <resources>
         <image name="addPhoto" width="43" height="42"/>
+        <image name="chevron.backward" catalog="system" width="96" height="128"/>
         <image name="photo.fill" catalog="system" width="128" height="93"/>
         <image name="plus.circle.fill" catalog="system" width="128" height="121"/>
         <image name="submit" width="70" height="39"/>
